deployments/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: fleetops
  labels:
    name: fleetops
